--- a/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_main.xml
+++ b/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_main.xml
@@ -4,31 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1"
-    tools:context="com.whatever.ghosts.ghosts_n_whatever.MainActivity">
+    android:weightSum="2"
+    tools:context="com.whatever.ghosts.ghosts_n_whatever.MainActivity"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvDisplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/etValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.96" />
+        <TextView
+            android:textSize="30sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ghosts-N-Whatever" />
+
+
+    </LinearLayout>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1"
+    android:gravity="center">
 
     <Button
-        android:id="@+id/btnClick"
+        android:id="@+id/activity_main_btnCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="302dp" />
+        android:text="Create Game"/>
+
+    <Button
+        android:id="@+id/activity_main_btnJoin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Join Game"/>
+
+</LinearLayout>
+
+
+
 
 </LinearLayout>
