--- a/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_active_game.xml
+++ b/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_active_game.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="50"
-        android:name="com.whatever.ghosts.com.whatever.ghosts.fragments.QRScanner" />
+        android:name="com.whatever.ghosts.fragments.QRScanner" />
 
     <ProgressBar
         android:id="@+id/progressBar2"
