--- a/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_add_location.xml
+++ b/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_add_location.xml
@@ -8,9 +8,11 @@
     tools:context="com.whatever.ghosts.ghosts_n_whatever.AddLocationActivity">
 
     <fragment
+        android:id="@+id/somehting"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5" />
+        android:layout_weight="5"
+        android:name="com.whatever.ghosts.fragments.QRScanner" />
 
     <LinearLayout
         android:layout_width="match_parent"
