--- a/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_active_game.xml
+++ b/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_active_game.xml
@@ -9,6 +9,7 @@
     tools:context="com.whatever.ghosts.ghosts_n_whatever.ActiveGame">
 
     <fragment
+        android:id="@+id/activity_game_qrScanner"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="50"
