--- a/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_lobby.xml
+++ b/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_lobby.xml
@@ -6,17 +6,82 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.whatever.ghosts.ghosts_n_whatever.LobbyActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="8"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="You've Join a Game - Wait for it too start"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="You've Join a Game - Wait for it too start"/>
 
-    <Button
-        android:id="@+id/activity_Lobby_btnAddLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Locations"/>
+        <Button
+            android:id="@+id/activity_Lobby_btnAddLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Locations"/>
+
+    </LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingBottom="15dp">
+                <ImageView
+                    android:id="@+id/imageGhost"
+                    android:layout_width="100dp"
+                    android:layout_height="150dp"/>
+
+                <TextView
+                    android:id="@+id/textGhost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ghost_description"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingBottom="15dp">
+                <ImageView
+                    android:id="@+id/imageGraverobber"
+                    android:layout_width="100dp"
+                    android:layout_height="150dp" />
+                <TextView
+                    android:id="@+id/textGraverobber"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/graverobber_description"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/imageGhostHunter"
+                    android:layout_width="100dp"
+                    android:layout_height="150dp" />
+                <TextView
+                    android:id="@+id/textGhostHunter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ghosthunter_description"/>
+            </LinearLayout>
+        </LinearLayout>
+
+
+
+    </ScrollView>
 
 
 </LinearLayout>
