--- a/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_lobby.xml
+++ b/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_lobby.xml
@@ -40,7 +40,8 @@
                 <ImageView
                     android:id="@+id/imageGhost"
                     android:layout_width="100dp"
-                    android:layout_height="150dp"/>
+                    android:layout_height="150dp"
+                    android:src="@mipmap/GhostArriving"/>
 
                 <TextView
                     android:id="@+id/textGhost"
@@ -56,7 +57,8 @@
                 <ImageView
                     android:id="@+id/imageGraverobber"
                     android:layout_width="100dp"
-                    android:layout_height="150dp" />
+                    android:layout_height="150dp"
+                    android:src="@mipmap/GraverobberArriving"/>
                 <TextView
                     android:id="@+id/textGraverobber"
                     android:layout_width="wrap_content"
@@ -70,7 +72,8 @@
                 <ImageView
                     android:id="@+id/imageGhostHunter"
                     android:layout_width="100dp"
-                    android:layout_height="150dp" />
+                    android:layout_height="150dp"
+                    android:src="@mipmap/GhostHunterArriving"/>
                 <TextView
                     android:id="@+id/textGhostHunter"
                     android:layout_width="wrap_content"
