--- a/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_add_location.xml
+++ b/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_add_location.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="10"
+    android:weightSum="8"
     tools:context="com.whatever.ghosts.ghosts_n_whatever.AddLocationActivity">
 
     <fragment
@@ -77,7 +77,8 @@
     <Button
         android:id="@+id/activity_addLocation_btnAdd"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:text="Add Location"/>
 
 </LinearLayout>
