--- a/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_lobby.xml
+++ b/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_lobby.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:orientation="vertical"
     tools:context="com.whatever.ghosts.ghosts_n_whatever.LobbyActivity">
     <LinearLayout
@@ -19,7 +20,7 @@
 
         <Button
             android:id="@+id/activity_Lobby_btnAddLocation"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Add Locations"/>
 
