--- a/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_active_game.xml
+++ b/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_active_game.xml
@@ -23,9 +23,14 @@
         android:layout_weight="1" />
 
     <LinearLayout
+        android:gravity="center_vertical"
+
+
+        android:padding="10dp"
+
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="5"
         android:weightSum="2"
         android:orientation="horizontal">
 
