--- a/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_join_game.xml
+++ b/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_join_game.xml
@@ -3,32 +3,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/crypt"
     android:orientation="vertical"
     tools:context="com.whatever.ghosts.ghosts_n_whatever.JoinGame">
 
-    <EditText
-        android:id="@+id/activity_joingame_etPlayerName"
-        android:layout_width="281dp"
-        android:layout_height="59dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Player Name"/>
-
-
-    <EditText
-        android:id="@+id/activity_joingame_etGameCode"
-        android:layout_width="281dp"
-        android:layout_height="59dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="gam3code"
-        android:text=""/>
-
-    <Button
-        android:id="@+id/activity_joingame_btnJoin"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Join Game" />
+        android:padding="10dp">
+
+        <EditText
+            android:id="@+id/activity_joingame_etPlayerName"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:hint="Player name"
+            android:textColor="#FF0000"
+            android:inputType="textPersonName"
+            android:text="" />
+
+
+        <EditText
+            android:id="@+id/activity_joingame_etGameCode"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:hint="gam3code"
+            android:textColor="#FFFFFF"
+            android:inputType="textPersonName"
+            android:text="" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+
+        <Button
+            android:id="@+id/activity_joingame_btnJoin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Join Game" />
+    </LinearLayout>
 </LinearLayout>
 
 
