--- a/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_lobby.xml
+++ b/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_lobby.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     tools:context="com.whatever.ghosts.ghosts_n_whatever.LobbyActivity">
     <LinearLayout
+        android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="8"
@@ -16,6 +17,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="18sp"
             android:text="You've Join a Game - Wait for it too start"/>
 
         <Button
