--- a/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_main.xml
+++ b/Android/Ghosts-N-Whatever/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/crypt"
+    android:background="@mipmap/logo"
     android:weightSum="2"
     tools:context="com.whatever.ghosts.ghosts_n_whatever.MainActivity"
     android:orientation="vertical">
@@ -16,11 +16,6 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:textSize="30sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ghosts-N-Whatever" />
 
 
     </LinearLayout>
@@ -33,7 +28,7 @@
 
     <Button
         android:id="@+id/activity_main_btnJoin"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Join Game"/>
 
